--- a/Backend/settings_server.ini
+++ b/Backend/settings_server.ini
@@ -8,7 +8,7 @@ DEBUG = False
 NAME = backend
 USER = DB_ADMIN
 PASSWORD = cyp6B79FybhwJDBU
-HOST = 127.0.0.1
+HOST =backend.cobn1fo5yhpi.us-east-2.rds.amazonaws.com
 
 [google_api]
 GOOGLE_API_KEY = AIzaSyAsoeWa_TWkeuNURayUsXahefeOmOkSCm8
