--- a/requirements.txt
+++ b/requirements.txt
@@ -16,12 +16,16 @@ inflection==0.5.1
 itypes==1.2.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+numpy==1.19.5
 packaging==20.8
+pandas==1.2.0
+pgeocode==0.3.0
 Pillow==8.0.1
 psycopg2-binary==2.8.6
 pycparser==2.20
 PyJWT==1.7.1
 pyparsing==2.4.7
+python-dateutil==2.8.1
 pytz==2020.4
 requests==2.25.1
 ruamel.yaml==0.16.12
